[project]
name = "PathTraverser"
version = "2.0.0"
description = "Traversing file system in Python easily"
authors = [
  { name = "Hubert Tarnacki", email = "hubert.tarnacki@gmail.com" }
]
maintainers = [
  { name = "Hubert Tarnacki", email = "hubert.tarnacki@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["traverse", "walk", "list", "files", "directories", "dirs", "filesystem", "path", "paths"]
classifiers = [
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Filesystems",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

requires-python = ">=3.12"

[project.urls]
homepage = "https://github.com/htarnacki/PathTraverser"
repository = "https://github.com/htarnacki/PathTraverser"
"bug tracker" = "https://github.com/htarnacki/PathTraverser/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = ["ruff"]
test = ["tox"]

[tool.pdm.build]
package-dir = "src"
excludes = ["tests/"]

[tool.black]
line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.yapf]
max-line-length = 120
column_limit = 120

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120
extend-select = [
    "E501",  # check line length
    # "N",  # pep8-naming
    # "B",  # flake8-bugbear
    # "C4",  # flake8-comprehensions
    # "ERA",  # flake8-eradicate/eradicate
    # "I",  # isort
    # "NPY",  # numpy
    # "PIE",  # flake8-pie
    # "PGH",  # pygrep
    # "RUF",  # ruff checks
    # "SIM",  # flake8-simplify
    # "TCH",  # flake8-type-checking
    # "TID",  # flake8-tidy-imports
    # "UP",  # pyupgrade
]
ignore = [
  # "N812",  # Lowercase `xxx` imported as non-lowercase 'YYY'
  "E402",  # Module level import not at top of file
]
